# resl

./: .gitignore  .release-please-manifest.json  CONTRIBUTING.md  Cargo.toml  LICENSE_MIT  README.md  SECURITY.md  cbindgen.toml  release-please-config.json  rustfmt.toml  tombi.toml
.github/workflows/: checks.yml  publish-docs.yml  release.yml
docs/: .gitignore  index.md  package-lock.json  syntax-guide.md
docs/.vitepress/: config.mts
docs/introduction/: getting-started.md  what-is-resl.md  why-resl.md
docs/syntax-guide/: best-practices.md  blocks.md  collections.md  control-flow.md  functions.md  literals.md  operations.md  overview.md
docs/usage/: bindings.md  cli-usage.md
include/: resl.h
resl/: CHANGELOG.md  Cargo.toml  README.md
resl-cli/: CHANGELOG.md  Cargo.toml  README.md
resl-cli/src/: error.rs  json_utils.rs  main.rs  toml_utils.rs
resl-ffi/: CHANGELOG.md  Cargo.toml  README.md  build.rs
resl-ffi/src/: lib.rs
resl/src/: binding.rs  block.rs  boolean.rs  context.rs  error.rs  expr.rs  fn_call.rs  for_each.rs  ident.rs  if_else.rs  index.rs  infix.rs  lib.rs  list.rs  macros.rs  map.rs  null.rs  number.rs  prefix.rs  state.rs  string.rs  utils.rs  value.rs
resl/src/function/: builtin.rs  defined.rs  mod.rs
