[package]
name = "resl-cli"
version = "0.2.0"
edition = "2024"
description = "Command-line interface for RESL - Runtime Evaluated Serialization Language"
homepage = "https://decipher3114.github.io/resl"
repository = "https://github.com/decipher3114/resl"
license = "Apache-2.0 OR MIT"
keywords = ["cli", "command-line", "config", "configuration", "resl"]
categories = ["command-line-utilities", "config"]

[[bin]]
name = "resl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
resl = { path = "../resl", version = "0.2.0", features = ["preserve-order"] }
serde = { version = "1.0.224", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.6"
yansi = { version = "1.0.1", features = ["detect-tty", "is-terminal"] }
